feat: add adaptive

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="pages/index.css"
     >
 </head>
-<body>
+<body class="page">
     <header class="header">
         <a href="#" class="header__logo">ЛОГОТИП</a>
         <button aria-label="Уведомления" class="header__button header__button_notification hover" type="button"></button>
